show results from backend

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,10 @@
 [Setting]
 test = 6
-experiment = 30
+experiment = 40
+max_retest = 10
+outlier_over_variance = 1
+min_data_filter = 10
+filter = true
 
 [Wording]
 title = "Stroop Effect 互動實驗"
