--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 [Setting]
+experiment_type = 2
 test = 6
 experiment = 40
 filter = true
@@ -16,6 +17,7 @@ results = "實驗結果"
 experiment = "正式局"
 back_button = "回到主畫面"
 test_button = "試玩"
+before_exp = "點選任意圓圈開始測試"
 exp_button = "正式開始"
 end_of_experiment = "實驗結束，謝謝您的參與，以下是這次的數據："
 help_message = """
