add conflict text

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,8 @@ results = "實驗結果"
 experiment = "正式局"
 back_button = "回到主畫面"
 test_button = "試玩"
-before_exp = "點選鍵盤任意按鍵開始實驗，並同時開始計時"
+before_exp = "點選鍵盤 A / S / D 按鍵開始實驗，並同時開始計時"
+between_exp = "點選鍵盤 A / S / D 按鍵繼續實驗"
 exp_button = "正式開始"
 end_of_experiment = "實驗結束，謝謝您的參與，以下是這次的數據："
 help_message = """
