--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 experiment_type = 2
 test = 2
 experiment = 6
-filter = true
+filter = false
 outlier_over_std = 3
 min_data_filter = 10
 output_file = 'output/record.csv'
@@ -17,8 +17,8 @@ results = "實驗結果"
 experiment = "正式局"
 back_button = "回到主畫面"
 test_button = "試玩"
-before_exp = "點選鍵盤 A / S / D 按鍵開始實驗，並同時開始計時"
-between_exp = "點選鍵盤 A / S / D 按鍵繼續實驗"
+before_exp = "點選任意按鍵開始實驗，並同時開始計時"
+between_exp = "點選任意按鍵繼續實驗"
 exp_button = "正式開始"
 end_of_experiment = "實驗結束，謝謝您的參與，以下是這次的數據："
 help_message = """
