add 2 plot api, import abort 404 when not enough data

--- a/config.toml
+++ b/config.toml
@@ -8,13 +8,11 @@ minimum_plot_size = 3
 output_file = 'output/record.csv'
 
 [Plotting]
-'font.size' = 30
+'font.size' = 17
 'lines.linewidth' = 3.5
-'legend.fontsize' = 25
-'axes.labelsize' = 20
-'axes.titlesize' = 24
-"ytick.labelsize" = 18
-"xtick.labelsize" = 18
+'legend.fontsize' = 22
+'axes.labelsize' = 18
+'axes.titlesize' = 22
 'figure.figsize' = "10, 5"
 'figure.autolayout' = true
 'font.family' = 'PMingLiU'
@@ -39,9 +37,11 @@ help_message = """
 第二行
 第三行
 """
-plot_x = '反應時間 (秒 / 100)'
+plot_x = '反應時間 (秒 / 100次反應)'
 plot_y = '次數'
 line_normal = '一般文字'
 line_conflict = '衝突文字'
+arrow_normal = '您的一般文字平均'
+arrow_conflict = '您的衝突文字平均'
 your_image = "您的實驗結果："
 literature_image = "原始實驗結果："
