update result page

--- a/config.toml
+++ b/config.toml
@@ -43,5 +43,7 @@ line_normal = '一般文字'
 line_conflict = '衝突文字'
 arrow_normal = '您的一般文字平均'
 arrow_conflict = '您的衝突文字平均'
-your_image = "您的實驗結果："
-literature_image = "原始實驗結果："
+literature_image = "文獻實驗結果："
+literature_image_discription="您的結果與 Stroop 的實驗結果相比較"
+local_image = "實驗結果累計："
+local_image_discription="於本模擬實驗網站進行的所有實驗結果"
