update help page texts

--- a/config.toml
+++ b/config.toml
@@ -32,10 +32,23 @@ between_exp = "點選任意按鍵繼續實驗"
 exp_button = "正式開始"
 end_of_experiment = "實驗結束，謝謝您的參與，以下是這次的數據："
 help_message = """
-這裡是說明文字
-第一行
-第二行
-第三行
+進入實驗頁面時，您會看到一個九宮格，
+按下鍵盤上紅綠藍任意按鍵會開始實驗，
+九宮格會顯示文字/圖標，並開始計時。
+
+您的任務就是依照九宮格內出現的文字/圖標的顏色，
+（注意並不是文字寫的顏色，而是文字被塗上的顏色）
+按下鍵盤上對應的按鍵。
+
+九宮格中以粗框黑色標誌的為現在您要選擇顏色的文字/圖標，
+順序由左至右，並由上至下，
+當九宮格所有文字/圖標都結束之後，表格會刷新，
+這時一樣按下鍵盤上紅綠藍任意按鍵繼續實驗。
+
+試玩局共有 2 輪，正式實驗則有 6 輪，
+請特別注意同時按下兩個以上的按鍵是被禁止的。
+
+說明到此結束，謝謝您的閱讀，敬祝實驗順利。
 """
 plot_x = '反應時間 (秒 / 100次反應)'
 plot_y = '次數'
